--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>Carter Vonk's First Website</h1>
-  <p>&amp; Hello world. This is my first website!</p>
+  <p>Hello world. This is my first website!</p>
   <p>My name is Carter Vonk, and I am a second-year ITM major here at Illinois Tech.</p>
   <p>I enjoy sports, cars, tech, and spending time with friends</p>
   <p>I am looking forward to expanding my abilities in tech this semester, especially with websites</p>
